changes in index.html

--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@
 <body>
 	<!-- Header -->
 	<header id="home">
-		<!-- Background Image -->
-		<div class="bg-img" style="background-image: url('./img/background1.jpg');">
-			<div class="overlay"></div>
-		</div>
-		<!-- /Background Image -->
 
 		<!-- home wrapper -->
 		<div class="home-wrapper">
@@ -52,11 +47,11 @@
 
 					<!-- home content -->
 					<div class="col-md-10 col-md-offset-1">
-						<img src="img/logo.jpg" width="50%" style="margin-bottom: 20px">
-						<div class="home-content">
-							<h2 class="white-text">We work with high impact investors and disruptive technology companies - helping people live healthier and longer.
+						<img src="img/logo.jpg" width="50%" style="margin-bottom: 60px">
+						<div class"home-content">
+							<h3 class="black-text">We work with high impact investors and disruptive technology companies - helping people live healthier and longer.
 							</h2>
-							<p class="white-text">Contact : hello@wellfleetventures.com</p>
+							<p class="black-text">hello@wellfleetventures.com</p>
 						</div>
 					</div>
 					<!-- /home content -->
@@ -89,3 +84,4 @@
 </body>
 
 </html>
+
