--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="col-md-10 col-md-offset-1">
 						<img src="img/logo.jpg" width="50%" style="margin-bottom: 60px">
 						<div class"home-content">
-							<h3 class="black-text">We work with high impact investors and disruptive technology companies - helping people live healthier and longer.
+							<h3 class="black-text">We work with high impact investors and disruptive healthcare technology companies - helping people live healthier and longer.
 							</h2>
 							<p class="black-text">hello@wellfleetventures.com</p>
 						</div>
