--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="col-md-10 col-md-offset-1">
 						<img src="img/logo.jpg" width="50%" style="margin-bottom: 60px">
 						<div class"home-content">
-							<h3 class="black-text">             We back visionary founders and invest in disruptive technologies changing healthcare globally.
+							<h3 class="black-text">             We back visionary founders and invest in disruptive technologies changing healthcare.
 							</h2>
 							<p class="black-text">hello@wellfleetventures.com</p>
 						</div>
@@ -82,5 +82,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 
 </body>
+
+	<footer>&copy; 2020 Wellfleet Ventures, a subsidiary Wellfleet Partners Limited </footer>
 
 </html>
