--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 
 </body>
 
-	<footer>&copy; 2020 Wellfleet Ventures, a subsidiary Wellfleet Partners Limited </footer>
+	<footer>
+		<p style="text-align:center"><small>&copy; 2020 Wellfleet Ventures, a subsidiary Wellfleet Partners Limited </small></p>
+		</footer>
 
 </html>
