--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="col-md-10 col-md-offset-1">
 						<img src="img/logo.jpg" width="50%" style="margin-bottom: 60px">
 						<div class"home-content">
-							<h3 class="black-text">            Backing early stage, disruptive technologies in healthcare and bioIT.  
+							<h3 class="black-text">            Backing early stage disruptive technologies in healthcare and bioIT.  
 							</h2>
 							<p class="black-text">hello@wellfleetventures.com</p>
 						</div>
